tests/fixtures/invalid/pow_list_list_bool.py
# Cannot call pow() with List[int], List[int], Bool
x = pow([1, 2, 3], [1, 2, 3], True)
